--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="completed">
         <h1>COMPLETED:</h1>
-        <app-tasklist></app-tasklist>
+        <app-tasklist filter="completed"></app-tasklist>
     </div>
 </div>
 
