--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <label>
-        <input type="checkbox" (change)="toggleCompleted()" checked="{{task.complete}}"> {{task.task_text}}
+        <input type="checkbox" (change)="toggleCompleted()" [checked]="task.complete"> {{task.task_text}}
     </label>
     <button class="deleteBtn" (click)="deleteTask()">Delete</button>
 
