api fully working

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,4 +1,4 @@
 <form>
   <input type="text" placeholder="Type your task" [formControl]="taskName">
-  <button type="submit">Add</button>
+  <button type="button" (click)="submit()">Add Task</button>
 </form>
