--- a/src/app/components/task/task.component.css
+++ b/src/app/components/task/task.component.css
@@ -1,10 +1,11 @@
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 .deleteBtn {
     color: white;
     background-color: indianred;
+    margin-left: 1rem;
 }
